--- a/styleguide/source/assets/scss/03-organisms/_action-details.scss
+++ b/styleguide/source/assets/scss/03-organisms/_action-details.scss
@@ -62,8 +62,18 @@
       position: fixed;
         top: 40px;
 
+      .translated-rtl &,
+      .translated-ltr & {
+        top: 80px;
+      }
+
       @media ($bp-medium-min) {
         top: 15px;
+
+        .translated-rtl &,
+        .translated-ltr & {
+          top: 55px;
+        }
       }
     }
 
