--- a/styleguide/source/assets/scss/07-pilot/_header.scss
+++ b/styleguide/source/assets/scss/07-pilot/_header.scss
@@ -20,6 +20,10 @@ $bp-header-logo-min: "min-width: 1000px";
     transition: left 0.5s ease;
     z-index: 9999;
 
+    .translated-rtl &,
+    .translated-ltr & {
+      top: 40px;
+    }
 
     @media ($bp-header-toggle-min) {
       background-color: $c-theme-blue;
